# Pac-Man

./: CMakeLists.txt  Common.h  README.md  Shader.c  Shader.h  glad.c  main.c
GameMap/: GameMapStructure.c  GameMapStructure.h
GameMap/inc/: GameMapStructure.h
GameMap/src/: GameMapStructure.c
Ghost/: GhostStructure.c  GhostStructure.h  GhostsMovement.c
Ghost/inc/: GhostsMovement.h
Ghost/src/: GhostStructure.c  GhostsMovement.c
Player/: PlayerStructure.c  PlayerStructure.h
Player/src/: PlayerStructure.c
shaders/: shader.fs  shader.vs
